Merging 1.13.0 to releases